created the command listener and some program rearranging

--- a/meson.build
+++ b/meson.build
@@ -2,10 +2,11 @@ project('payload-file-transmission', 'c')
 
 include = include_directories('lib')
 
-sha_src = ['lib/sha256.c', 'lib/sha256_utils.c']
+sha_src = ['lib/sha256.c', 'sha256_utils.c']
+listener_src = ['listener.c', 'commands.c', sha_src]
 
-sha = static_library('sha256', sha_src)
+executable('command-listener', listener_src, include_directories : include)
 
 if get_option('build_tests')
-    executable('test-sha256', ['lib/sha256.c', 'lib/sha256_utils.c'], c_args : '-DSHA256_TEST')
+    executable('test-sha256', ['lib/sha256.c', 'sha256_utils.c'], include_directories : include, c_args : '-DSHA256_TEST')
 endif
