--- a/command-listener.service
+++ b/command-listener.service
@@ -1,6 +1,7 @@
 [Unit]
 Description=Daemon for listening for commands over the uart port
 BindsTo=sys-devices-c280000.serial-tty-ttyTHS2.device
+Requires=command-listener-pre.service
 After=sys-devices-c280000.serial-tty-ttyTHS2.device command-listener-pre.service
 StartLimitIntervalSec=1
 StartLimitBurst=3
