--- a/command-listener.service
+++ b/command-listener.service
@@ -3,15 +3,14 @@ Description=Daemon for listening for commands over the uart port
 BindsTo=sys-devices-c280000.serial-tty-ttyTHS2.device
 Requires=command-listener-pre.service
 After=sys-devices-c280000.serial-tty-ttyTHS2.device command-listener-pre.service
-FailureAction=poweroff
-SuccessAction=poweroff
 
 [Service]
-Type=simple
+Type=oneshot
 User=root
 WorkingDirectory=/home/nvidia/transfer-temp
 ExecStart=/home/nvidia/payload-command-protocol/build/command-listener
-Restart=no
+ExecStart=@SYSTEMCTL@ poweroff
+FailureAction=poweroff
 
 [Install]
 WantedBy=multi-user.target
