--- a/command-listener-pre.service
+++ b/command-listener-pre.service
@@ -5,7 +5,7 @@ After=sys-devices-c280000.serial-tty-ttyTHS2.device
 [Service]
 Type=oneshot
 User=root
-ExecStart=/bin/stty -F /dev/ttyTHS2 115200 raw -echo
+ExecStart=/bin/stty -F /dev/ttyUSB0 115200 raw -echo
 
 [Install]
 WantedBy=multi-user.target
