--- a/command-listener.service
+++ b/command-listener.service
@@ -8,7 +8,8 @@ Type=simple
 User=root
 WorkingDirectory=/home/nvidia/orbit/workspace
 ExecStartPre=/bin/stty -F /dev/ttyTHS1 115200 raw -echo
-ExecStart=/home/nvidia/orbit/cdh_comm/payload-command-protocol/build/command-listener
+#ExecStart=/home/nvidia/orbit/cdh_comm/payload-command-protocol/build/command-listener
+ExecStart=/home/nvidia/orbit/workspace/bin/command-listener
 # TODO: send a code to CDH that this was the type of failure?
 #ExecStopPost=/bin/systemctl poweroff
 
